--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,174 @@ body {
   transition: all 0.3s ease-out;
   transition-delay: 0.2s;
 }
+
+@media screen and (max-width: 480px) {
+  body {
+    min-height: 100vh;
+    background: #212534;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+
+  .card {
+    background: #191c29;
+    width: 90vw;
+    min-height: 90vh;
+    padding: 3px;
+    position: relative;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1em;
+    color: rgba(203, 209, 212, 0.8);
+    cursor: pointer;
+    font-family: "Petit Formal Script", cursive;
+  }
+
+  .card::before {
+    content: "";
+    width: 104%;
+    height: 102%;
+    border-radius: 3px;
+    background-image: linear-gradient(
+      var(--rotate),
+      #5ddcff,
+      #3c67e3 43%,
+      #4e00c2
+    );
+    position: absolute;
+    z-index: -1;
+    top: -1%;
+    left: -2%;
+    animation: spin 2.5s linear infinite;
+  }
+
+  .card::after {
+    position: absolute;
+    content: "";
+    top: calc(var(--card-height) / 6);
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale(0.8);
+    filter: blur(calc(var(--card-height) / 6));
+    background-image: linear-gradient(
+      var(--rotate),
+      #5ddcff,
+      #3c67e3 43%,
+      #4e00c2
+    );
+    opacity: 1;
+    transition: opacity 0.5s;
+    animation: spin 2.5s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      --rotate: 0deg;
+    }
+    100% {
+      --rotate: 360deg;
+    }
+  }
+
+  .todoList {
+    width: 80%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: transparent;
+    padding: 0.5rem 1.5rem;
+    margin: 1rem 0rem;
+    border: 1px solid #fff;
+    border-radius: 0.5rem;
+  }
+  .todoListInput {
+    text-align: center;
+    border: none;
+    list-style: none;
+    background-color: transparent;
+    color: aliceblue;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
+  }
+  .done {
+    color: rgb(166, 174, 182);
+    text-decoration: line-through;
+  }
+
+  .button-small {
+    background-color: transparent;
+    padding: 0.2rem 0.3rem;
+    margin: 0rem 0.1rem;
+    border: none;
+    font-size: 1.2rem;
+  }
+  .one {
+    color: #eb6440;
+  }
+  .two {
+    color: #eff5f5;
+  }
+  .three {
+    color: #497174;
+  }
+
+  /* Form css */
+  .text-input {
+    position: relative;
+  }
+
+  .text-input input[type="text"] {
+    display: inline-block;
+    height: 40px;
+    box-sizing: border-box;
+    outline: none;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    padding: 10px 30px;
+    transition: all 0.1s ease-out;
+  }
+
+  .text-input input[type="text"] + button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 40px;
+    line-height: 40px;
+    color: white;
+    border: none;
+    border-radius: 0 3px 3px 0;
+    padding: 0 20px;
+    background: #3a51d4;
+    transform: translateZ(0) translateX(0);
+    transition: all 0.3s ease-in;
+    transition-delay: 0.2s;
+  }
+
+  .text-input input[type="text"]:focus + button {
+    transform: translateX(60%) translateY(0%);
+    border-radius: 3px;
+    transition: all 0.1s ease-out;
+  }
+
+  .text-input input[type="text"]:focus {
+    padding: 10px 40px;
+    transform: translateX(-15%) translateY(0%);
+    transition: all 0.3s ease-out;
+    transition-delay: 0.2s;
+  }
+}
