--- a/src/App.css
+++ b/src/App.css
@@ -256,17 +256,22 @@ body {
       --rotate: 360deg;
     }
   }
+  .todo-cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   .todoList {
-    width: 80%;
+    width: 95%;
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: transparent;
-    padding: 0.5rem 1.5rem;
-    margin: 1rem 0rem;
+    padding: 0.5rem 0.5rem;
+    margin: 1.5rem 0rem;
     border: 1px solid #fff;
     border-radius: 0.5rem;
   }
@@ -277,7 +282,7 @@ body {
     background-color: transparent;
     color: aliceblue;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-family: "Poppins", sans-serif;
   }
   .done {
@@ -300,51 +305,5 @@ body {
   }
   .three {
     color: #497174;
-  }
-
-  /* Form css */
-  .text-input {
-    position: relative;
-  }
-
-  .text-input input[type="text"] {
-    display: inline-block;
-    height: 40px;
-    box-sizing: border-box;
-    outline: none;
-    border: 1px solid lightgray;
-    border-radius: 3px;
-    padding: 10px 30px;
-    transition: all 0.1s ease-out;
-  }
-
-  .text-input input[type="text"] + button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    height: 40px;
-    line-height: 40px;
-    color: white;
-    border: none;
-    border-radius: 0 3px 3px 0;
-    padding: 0 20px;
-    background: #3a51d4;
-    transform: translateZ(0) translateX(0);
-    transition: all 0.3s ease-in;
-    transition-delay: 0.2s;
-  }
-
-  .text-input input[type="text"]:focus + button {
-    transform: translateX(60%) translateY(0%);
-    border-radius: 3px;
-    transition: all 0.1s ease-out;
-  }
-
-  .text-input input[type="text"]:focus {
-    padding: 10px 40px;
-    transform: translateX(-15%) translateY(0%);
-    transition: all 0.3s ease-out;
-    transition-delay: 0.2s;
   }
 }
